<resources>
    <string name="app_name">Rooms</string>
    <string name="last_name_hint">Write last name</string>
    <string name="last_name">Last name</string>
    <string name="first_name_hint">Write your first name</string>
    <string name="first_name">First name</string>
    <string name="img_desc">hej</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="add_person_success">successfully added</string>
    <string name="empty_fields">empty fields</string>
    <string name="no_matches">no matches found</string>
    <string name="search_result">Search result:</string>
    <string name="top_result">View top result</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="person">Person</string>
</resources>